# lambda.prototypes

./: CMakeLists.txt  KConfig.in  README.md  kconfig.cmake
.github/workflows/: main.yml
extra/lib/python3/_auxiliary/: __init__.py  hlds.old.py
extra/lib/python3/_auxiliary/common/: __init__.py
extra/lib/python3/_auxiliary/common/module_helpers/: __init__.py  lazy_attributes.py
extra/lib/python3/_auxiliary/hlds/: _class.py  _snapshot.py  cli.py
extra/lib/python3/_auxiliary/kconfig/: __init__.py  _class.py
extra/utils/: hlds.py  kconfig.py
extra/utils/hlds_launcher/: CMakeLists.txt
extra/utils/hlds_launcher/src/: hlds.cxx  hlds.py
metamod_plugin/: CMakeLists.txt
metamod_plugin/src/: api.hxx  export.cxx  global.h  log.cxx  log.hxx  main.cxx  main.hxx  namespace_.hxx  root_.hxx  singleton.cxx  singleton.hxx
